base/portal/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: portal
  template:
    metadata:
      labels:
        app.kubernetes.io/component: portal
      name: deployment
    spec:
      containers:
        - image: ghcr.io/minbzk/mijn-bureau-portal:v1.0.5
          imagePullPolicy: Always
          name: portal
          ports:
            - containerPort: 80
              protocol: TCP
