base/portal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - name: portal
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app.kubernetes.io/component: portal
  type: ClusterIP
