base/portal/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: ingress
spec:
  ingressClassName: nginx
  rules:
    - host: portal.la-suite.apps.digilab.network
      http:
        paths:
          - backend:
              service:
                name: service
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - portal.la-suite.apps.digilab.network
      secretName: portal-tls
